fix: align navigation buttons

--- a/src/components/NavigationListItem/NavigationListItem.module.css
+++ b/src/components/NavigationListItem/NavigationListItem.module.css
@@ -15,5 +15,6 @@
   gap: 8px;
   border: none;
   background-color: transparent;
+  align-items: center;
   padding: 0;
 }
